<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/event_name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:id="@+id/editEventName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add_shooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editShooterName"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/shooter_name"
        android:ems="10"
        android:id="@+id/editShooterName"
        android:layout_below="@+id/editEventName"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/remove_most_recent_shooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRemoveMostRecent"
        android:layout_below="@+id/editShooterName"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/list_of_shooters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRemoveMostRecent"
        android:layout_alignParentStart="true"
        android:id="@+id/textListOfShooters" />

    <Button
        android:text="@string/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonBegin" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textListOfShooters"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonBegin" />

</RelativeLayout>