<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phili.rifletracker.AddNewEvent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/event_name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tbEventName"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/shooter_name"
        android:ems="10"
        android:layout_below="@+id/tbEventName"
        android:layout_alignParentStart="true"
        android:id="@+id/tbShooterName"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonBegin" />

    <Button
        android:text="@string/remove_most_recent_shooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonRemove" />

    <Button
        android:text="@string/add_shooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddShooter"
        android:layout_below="@+id/tbShooterName"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/list_of_shooters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddShooter"
        android:layout_alignParentStart="true"
        android:id="@+id/textListOfShooters" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textListOfShooters"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonBegin"
        android:id="@+id/listOfShooters" />

</RelativeLayout>
