<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recent_events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phili.rifletracker.RecentEvents">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:id="@+id/spinner"
        android:textColor="#000"/>

    <TextView
        android:text="@string/select_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textSelectEvent" />

    <Button
        android:text="@string/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRecentEventsRename"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/buttonRecentEventsEdit"
        android:layout_alignStart="@+id/buttonRecentEventsEdit" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRecentEventsDelete"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/buttonRecentEventsRename"
        android:layout_alignStart="@+id/buttonRecentEventsRename" />

    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRecentEventsEdit"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/buttonRecentEventsView" />

    <Button
        android:text="@string/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRecentEventsView"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/buttonRecentEventsEdit"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
