<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phili.rifletracker.MainActivity">

    <Button
        android:text="@string/recent_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRecentEvents"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSettings"
        android:layout_below="@+id/buttonExportEvent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:text="@string/add_new_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddNewEvent"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/buttonRecentEvents"
        android:layout_alignStart="@+id/buttonRecentEvents" />

    <Button
        android:text="@string/export_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExportEvent"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/buttonAddNewEvent"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
