<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recent_event_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phili.rifletracker.RecentEventEdit">

    <TextView
        android:text="@string/select_shooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/textSelectShooter" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelectShooter"
        android:layout_alignParentStart="true"
        android:id="@+id/spinner" />

    <Button
        android:text="@string/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEventEditRename"
        android:layout_above="@+id/buttonEventEditScore"
        android:layout_alignEnd="@+id/textSelectShooter"
        android:layout_marginBottom="28dp" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEventEditDelete"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/buttonEventEditScore"
        android:layout_alignStart="@+id/buttonEventEditRename" />

    <Button
        android:text="@string/edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEventEditScore"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
